--- a/less/style.less
+++ b/less/style.less
@@ -7,4 +7,8 @@
 @import 'information/information.less';
 @import 'research/research.less';
 @import 'slider/slider.less';
+@import 'toggles/toggles.less';
 @import 'price/price.less';
+@import 'contacts/contacts.less';
+@import 'map/map.less';
+@import 'social/social.less';
