--- a/less/information/information.less
+++ b/less/information/information.less
@@ -72,6 +72,7 @@
 	width: 156px;
 	height: 275px;
 	display: none;
+	position: relative;
 }
 
 .information__img-item:nth-child(1) {
@@ -178,16 +179,16 @@
 		position: relative;
 		width: 188px;
 		height: 300px;
-	}
 
-	.information__img-item:before {
-		content: '';
-		left: -10px;
-		width: 294px;
-		height: 17px;
-		position: absolute;
-		border-radius: 5px;
-		box-shadow: 0px 4px 7px 0.1px 2px;
+		&:before {
+			content: '';
+			position: absolute;
+			background-image: url(../less/information/img/shadow.png);
+			bottom: 0;
+			left: -53px;
+			width: 300px;
+			height: 8px;
+		}
 	}
 
 	.information__list {
