--- a/less/site-list/site-list.less
+++ b/less/site-list/site-list.less
@@ -41,7 +41,8 @@
 
 @media (min-width: @desktop-width) {
 	.main-nav--closed .site-list,
-	.main-nav--opened .site-list {
+	.main-nav--opened .site-list,
+	.main-nav--nojs .site-list {
 		display: flex;
 		width: 620px;
 		justify-content: space-between;
