--- a/less/site-list/site-list.less
+++ b/less/site-list/site-list.less
@@ -72,4 +72,10 @@
 			color: rgba(255, 255, 255, 0.3);
 		}
 	}
+
+	.site-list__item .active {
+		box-sizing: border-box;
+		padding-bottom: 10px;
+		border-bottom: 2px solid #ffffff; 
+	}
 }
