--- a/less/style.less
+++ b/less/style.less
@@ -12,3 +12,7 @@
 @import 'contacts/contacts.less';
 @import 'map/map.less';
 @import 'social/social.less';
+@import 'competition/competition.less';
+@import 'photo-heading/photo-heading.less';
+@import 'gallery/gallery.less';
+@import 'upload/upload.less';
