--- a/less/social/social.less
+++ b/less/social/social.less
@@ -1,13 +1,14 @@
 .social {
-	display: none;
 	min-height: 130px;
 }
 
 .social__wrapper {
 	margin: 0 auto;
-	width: 620px;
+	width: 280px;
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .social__logo a {
@@ -31,8 +32,12 @@
 }
 
 .social__logo {
-	padding-top: 35px;
-	padding-left: 1px;
+	padding-top: 40px;
+	padding-left: 0px;
+
+	& .social__logo-tablet {
+		display: block;
+	}
 }
 
 .social__list {
@@ -42,8 +47,8 @@
 	display: flex;
 	width: 177px;
 	justify-content: space-between;
-	padding-top: 38px;
-	margin-right: 18px;
+	padding-top: 40px;
+	margin-right: 0px;
 }
 
 .social__link {
@@ -91,7 +96,7 @@
 
 .social__academy-logo {
 	position: relative;
-	padding-top: 50px;
+	padding-top: 40px;
 	padding-right: 42px;
 
 	&:before {
@@ -109,6 +114,29 @@
 @media (min-width: @tablet-width) {
 	.social {
 		display: block;
+	}
+
+	.social__wrapper {
+		flex-direction: row;
+		width: 655px;
+	}
+
+	.social__logo {
+		padding-top: 25px;
+		padding-left: 19px;
+	}
+
+	.social__list {
+		margin-right: 19px;
+	}
+	
+	.social__academy-logo {
+		padding-right: 40px;
+		margin-right: 19px;
+
+		&:before {
+			right: -4px;
+		}
 	}
 
 	.social__logo .social__logo-tablet {
@@ -135,22 +163,22 @@
 	}
 
 	.social__logo {
-		padding-top: 66px;
+		padding-top: 85px;
 		padding-left: 0px;
 	}
 
 	.social__list {
-		padding-top: 77px;
-		margin-right: -8px;
+		padding-top: 103px;
+		margin-right: -15px;
 	}
 
 	.social__academy-logo {
 		font-size: 18px;
-		padding-top: 87px;
-		padding-right: 41px;
+		padding-top: 100px;
+		padding-right: 21px;
 
 		&:before {
-			right: -3px;
+			right: -22px;
 		}
 	}
 }
